--- a/popup.html
+++ b/popup.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
-  <title>Hello World!</title>
+  <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+  <title>게시글 목록</title>
   <style>
-    body { width: 200px; text-align: center; font-family: Arial; }
-    button { padding: 10px; margin-top: 20px; }
+    body { width: 250px; font-family: Arial, sans-serif; }
+    button { width: 100%; padding: 10px; margin: 10px 0; cursor: pointer; }
+    ul { list-style: none; padding: 0; }
+    li { margin-bottom: 10px; }
+    img { width: 100%; height: auto; border-radius: 5px; }
   </style>
 </head>
 <body>
-  <h1>Hello, World!</h1>
-  <button id="greetBtn">Click Me!</button>
+  <h3>게시글 목록</h3>
+  <button id="fetchPosts">가져오기</button>
+  <ul id="postList"></ul>
   <script src="popup.js"></script>
 </body>
 </html>
